fixed minor scaling problem (was zoomed in too much)

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -77,7 +77,7 @@
 
 #main-page-programming-image-wrapper-content {
   width: 100%;
-  height: 3800px;
+  height: 3895px;
   overflow: hidden;
   position: relative;
 }
@@ -170,7 +170,7 @@
 
 .welcome-page-buttons {
   margin-left: 65px;
-  margin-top: 120px;
+  margin-top: 100px;
 }
 
 .welcome-page-buttons li{
